# online-TRPG

./: .dockerignore  .env.example  .gitignore  .rgignore  Jenkinsfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
ai/: .dockerignore  .env.example  .gitignore  AI_REQUEST_INVENTORY.md  AI_SHARED_TYPES_ALIGNMENT.md  AI_STUDIO_IO_FIELD_REFERENCE.md  BACKEND_ENGINE_INTEGRATION_PLAN.md  BENCHMARK_INTERPRETER_HARNESS.md  BENCHMARK_INTERPRETER_HARNESS_RESULT.md  Dockerfile  README.md  SRD_DATA_RULES_PIPELINE_PLAN.md  pyproject.toml
ai/app/: main.py
ai/app/adapters/: __init__.py  shared_types.py
ai/app/clients/: google_ai_studio.py
ai/app/core/: config.py  errors.py  response_logger.py
ai/app/prompts/: actor.v1.md  check_result.v1.md  director.v1.md  interpreter.v1.md  narrator.v1.md  npc_dialogue.v1.md  summarizer.v1.md
ai/app/schemas/: actor.py  check_result.py  director.py  harness.py  interpreter.py  narrator.py  npc_dialogue.py  summarizer.py
ai/app/services/: harness.py
ai/app/srd/: __init__.py  build.py  models.py  retrieval.py
ai/app/tests/: test_ai_shared_types_alignment.py  test_config.py  test_google_ai_studio_client.py  test_harness_service.py  test_internal_ai_routes.py  test_interpreter_contract_validation.py  test_interpreter_schema_main_command_routing.py  test_live_google_ai_studio.py  (+10 more)
ai/benchmarks/: interpreter_harness_cases.json  narrator_quality_cases.json
ai/scripts/: evaluate_p0_ai_quality.py  measure_interpreter_harness.py  summarize_interpreter_harness_benchmark.py
ai/translated/: README.md
(+605 files in other folders)
