[project]
name = "ai-server"
version = "0.1.0"
description = "FastAPI gateway for local LLM (Ollama) integration"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
]

[tool.uv]
# 서버 앱이므로 설치 가능한 패키지로 빌드하지 않음 (의존성 관리 전용)
package = false
