[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s14p31a201-ai-harness"
version = "0.1.0"
description = "Minimal Google AI Studio harness for the AI service."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "google-genai>=1.10.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<10.0.0",
  "httpx>=0.27.0,<1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]

[tool.setuptools.packages.find]
include = ["app*"]
